[package]
name = "portal-state-network"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.2", features = ["rlp", "serde"] }
alloy-rlp = { version = "0.3.8", features = ["derive"] }
alloy-serde = "0.3.2"
anyhow = "1.0.87"
clap = "4.5.17"
ethportal-api = { git = "https://github.com/ethereum/trin.git", rev = "c9f937bd2c31dd80e1c68bcada73a63a5a61238a" }
serde = "1.0.210"
serde_json = "1.0.128"
tokio = "1.40.0"

[dev-dependencies]
rstest = "0.22.0"
